# EC

./: .gitignore  .gitmodules  README.md  csgo.txt
EFI/: info.txt
EFI/builder/: build_apex.bat  build_csgo.bat  build_loader.bat
EFI/edk2/: BaseCacheMaintenanceLib.lib  BaseCpuLib.lib  BaseCryptLib.lib  BaseDebugPrintErrorLevelLib.lib  BaseLib.lib  BaseMemoryLib.lib  BasePrintLib.lib  BaseSynchronizationLib.lib  GlueLib.lib  IntrinsicLib.lib  UefiApplicationEntryPoint.lib  UefiBootServicesTableLib.lib  UefiDebugLibConOut.lib  UefiDevicePathLibDevicePathProtocol.lib  UefiDriverEntryPoint.lib  UefiFileHandleLib.lib  UefiHiiLib.lib  UefiHiiServicesLib.lib  UefiLib.lib  UefiMemoryAllocationLib.lib  UefiMemoryLib.lib  UefiRuntimeLib.lib  UefiRuntimeServicesTableLib.lib  UefiShellLib.lib  UefiSortLib.lib
EFI/private - Loader/: boot.default.props  boot.sln  boot.vcxproj  boot.vcxproj.filters  main.c  stdafx.h  util.c  util.h
EFI/tools/: info.txt
apex/: README.md
apex/km/: km.vcxproj  km.vcxproj.filters  main.cpp
apex/shared/: apex.cpp  apex.h  apexfeatures.cpp  apexgame.h  features.cpp  shared.h
apex/um/: CMakeLists.txt  run
apex/um/apex/: CMakeLists.txt  main.cpp  vm.cpp
apex/um/rx/: CMakeLists.txt  LICENCE  README.md  rx.h
apex/um/rx/include/: rx_handle.h  rx_input.h  rx_list.h  rx_module.h  rx_process.h  rx_types.h
apex/um/rx/src/: rx_handle.c  rx_input.c  rx_list.c  rx_module.c  rx_process.c
cs2/shared/: cs.cpp  cs.h  cs2.cpp  cs2.h  cs2_bhop.cpp  cs2_bhop_efi.cpp  cs2features.cpp  cs2game.h  features.cpp  shared.h
csgo/km/: km.inf  km.vcxproj  km.vcxproj.filters  main.cpp
csgo/pcileech/: main.cpp  pcileech.vcxproj
csgo/shared/: cs.cpp  cs.h  csgo.cpp  csgo.h  csgofeatures.cpp  csgogame.h  features.cpp  shared.h
csgo/um/: main.cpp  um.vcxproj  um.vcxproj.filters
projects - Apex/DMA/: main.cpp  pcileech.filters  pcileech.vcxproj
projects - Apex/KSJ/: CMakeLists.txt  main.cpp
projects - Apex/PROTON/: main.cpp  run
projects - Apex/SGV/: main.cpp  sgv.vcxproj  sgv.vcxproj.filters
projects - Apex/UM/: main.cpp  um.vcxproj  um.vcxproj.filters
projects - CS2/DMA/: main.cpp  pcileech.vcxproj
projects - CS2/KM/: km.vcxproj  km.vcxproj.filters  main.cpp  start.bat
projects - CS2/KSJ/: CMakeLists.txt  main.cpp
projects - CS2/LINUX/: main.cpp  run
projects - CS2/SGV/: main.cpp  sgv.vcxproj
projects - CS2/UM/: main.cpp  um.vcxproj  um.vcxproj.filters
projects - CSGO/DMA/: main.cpp  pcileech.vcxproj
projects - CSGO/KM/: km.vcxproj  main.cpp  mouse.asm
projects - CSGO/KSJ/: CMakeLists.txt  main.cpp
projects - CSGO/SGV/: main.cpp  (+2 more)
projects/KSJ/: CMakeLists.txt  libSDL3.so.0  main.cpp
(+418 files in other folders)
